--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 
 LeCoin official development tree
 
-LeCoin is a Proof-of-Stake-Time cryptocurrency.
+LeCoin is a Proof-of-Stake-Time cryptocurrency
 
 Development process
 ===========================
